# bnvd

./: .env  README.md  SECURITY.md  advisor.py  app.py  design_guidelines.md  export.py  ics_attack.json  mitre.py  mitre_translate.py  mobile_attack.json  nvd_api.py  pre_attack_attack.json  pyproject.toml  security.py  seo.py  translator.py  utils.py  vulns.py
.github/actions/bnvd-cve-enricher/: README.md  action.yml
.github/actions/bnvd-cve-enricher/src/: main.py
.github/actions/bnvd-dependabot/: action.yml
.github/actions/bnvd-security-enricher/src/: github_api.py  main.py  reporters.py  utils.py
.github/workflows/: BNVD Security Sync.yml  bnvd-analysis.yml  bnvd-dependabot-check.yml  bnvd-security-sync.yml
api/v1/: README.md  __init__.py  api.py
api_clients/crystal/: README.md  bnvd_client.cr
api_clients/go/: bnvd_client.go  go.mod
api_clients/java/: README.md  pom.xml
api_clients/java/src/main/java/org/bnvd/client/: BNVDClient.java
api_clients/javascript/: README.md  bnvd-client.js  bnvd-client.ts  index.ts  package.json  tsconfig.json
api_clients/ruby/: README.md  bnvd_client.gemspec  bnvd_client.rb
bnvd_pip_package/: README.md  test.py
cli/: README.md  bnvd_cli.py  setup.py
static/: manifest.json  sw.js
static/css/: style.css
static/js/: main.js
templates/: 5recentes.html  api-docs.html  base.html  busca-por-ano.html  busca.html  detalhes.html  diretorio-de-certificacoes.html  doacao.html  downloads.html  index.html  kev.html  mitre-attack.html  noticias.html  politica.html  privacidade.html  recentes.html  sobre.html  treinamentos.html  ver-todas-noticias.html  vulnerabilidades-por-ano.html
