[project]
name = "bnvd"
version = "2.0.0"
description = "BNVD - Banco Nacional de Vulnerabilidades Ciberneticas"
requires-python = ">=3.11,<4"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.14.2",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "googletrans==4.0.0rc1",
    "gunicorn>=23.0.0",
    "lxml>=6.0.2",
    "markupsafe>=3.0.2",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.10",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.4",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
]

[project.scripts]
bnvd-cli = "cli.bnvd_cli:main"
bnvd = "cli.bnvd_cli:main"
